Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.0 Beta1
-
-
b2f1ca59b7cc7764d673f5ed806552f188ed6361 0ea3d630b1fd1fc21c65c43063792e4cbf0c2cdf
Description
For example test below. Test actually fails, but the runner exit with success:
14:05:51 QtQA::App::TestRunner: begin tst_languagechange: [release\tst_languagechange.exe] [-silent] [-o] [C:\work\ci\qt\qtbase\stable\_artifacts\test-logs\tst_languagechange.exe-testresults-00.xml,xml] [-o] [-,txt] 14:05:51 C:\work\build\qt\qtbase\tests\auto\other\languagechange\release\tst_languagechange.exe 64 bit, release executable 14:05:51 Direct dependencies: Qt5Core Qt5Gui Qt5Test Qt5Widgets 14:05:51 All dependencies : Qt5Core Qt5Gui Qt5Test Qt5Widgets 14:05:51 To be deployed : Qt5Core Qt5Gui Qt5Test Qt5Widgets 14:05:51 Updating Qt5Core.dll. 14:05:51 Updating Qt5Gui.dll. 14:05:51 Updating Qt5Test.dll. 14:05:51 Updating Qt5Widgets.dll. 14:05:51 Updating libEGL.dll. 14:05:51 Updating libGLESv2.dll. 14:05:51 Updating d3dcompiler_qt.dll. 14:05:51 Creating directory accessible. 14:05:51 Updating qtaccessiblewidgets.dll. 14:05:51 Creating directory imageformats. 14:05:51 Updating qgif.dll. 14:05:51 Updating qico.dll. 14:05:51 Updating qjpeg.dll. 14:05:51 Creating directory platforms. 14:05:51 Updating qwinrt.dll. 14:05:51 Warning: Could not find any translations in C:\work\build\qt\qtbase\translations (developer build?) 14:05:52 qt.winrtrunner: Using the Appx profile. 14:05:53 qt.winrtrunner: App started with process ID 1916 14:06:05 qt.winrtrunner: App exited with code 0 14:06:05 ********* Start testing of tst_languageChange ********* 14:06:05 Config: Using QtTest library 5.3.1, Qt 5.3.1 14:06:05 PASS : tst_languageChange::initTestCase() 14:06:05 QWARN : tst_languageChange::retranslatability(QInputDialog) This plugin does not support propagateSizeHints() 14:06:05 QWARN : tst_languageChange::retranslatability(QInputDialog) This plugin does not support propagateSizeHints() 14:06:05 PASS : tst_languageChange::retranslatability(QInputDialog) 14:06:05 QWARN : tst_languageChange::retranslatability(QColorDialog) This plugin does not support propagateSizeHints() 14:06:05 QWARN : tst_languageChange::retranslatability(QColorDialog) This plugin does not support propagateSizeHints() 14:06:05 PASS : tst_languageChange::retranslatability(QColorDialog) 14:06:05 QWARN : tst_languageChange::retranslatability(QFileDialog) QPixmap::scaleWidth: Pixmap is a null pixmap 14:06:05 QWARN : tst_languageChange::retranslatability(QFileDialog) QPixmap::scaleWidth: Pixmap is a null pixmap 14:06:05 QWARN : tst_languageChange::retranslatability(QFileDialog) QPixmap::scaleWidth: Pixmap is a null pixmap 14:06:05 QWARN : tst_languageChange::retranslatability(QFileDialog) QPixmap::scaleWidth: Pixmap is a null pixmap 14:06:05 QWARN : tst_languageChange::retranslatability(QFileDialog) This plugin does not support propagateSizeHints() 14:06:05 QWARN : tst_languageChange::retranslatability(QFileDialog) This plugin does not support propagateSizeHints() 14:06:05 QDEBUG : tst_languageChange::retranslatability(QFileDialog) Missing: QSet("QFileDialog::File") 14:06:05 QDEBUG : tst_languageChange::retranslatability(QFileDialog) Unexpected: QSet("QFileDialog::Alt+Left", "QShortcut::Up", "QShortcut::Print", "QFileDialog::Sidebar", "QShortcut::Alt", "QShortcut::End", "QShortcut::Ctrl", "QShortcut::Meta", "QFileDialog::Create a New Folder", "QShortcut::Enter", "QFileDialog::List of places and bookmarks", "QShortcut::Home", "QShortcut::Tab", "QShortcut::Pause", "QFileDialog::Go forward", "QFileDialog::Files", "QShortcut::Left", "QShortcut::Space", "QFileDialog::Change to detail view mode", "QShortcut::Esc", "QFileDialog::Go to the parent directory", "QFileDialog::Change to list view mode", "QShortcut::Return", "QFileDialog::Go back", "QShortcut::Right", "QShortcut::SysReq", "QShortcut::Shift", "QShortcut::Num", "QFileDialog::Alt+Up", "QShortcut::Backtab", "QFileDialog::Alt+Right", "QFileSystemModel::Name", "QShortcut::Ins", "QShortcut::Del", "QShortcut::Backspace") 14:06:05 FAIL! : tst_languageChange::retranslatability(QFileDialog) 'expected.isEmpty()' returned FALSE. () 14:06:05 tst_languagechange.cpp(334) : failure location 14:06:05 PASS : tst_languageChange::cleanupTestCase() 14:06:05 Totals: 4 passed, 1 failed, 0 skipped 14:06:05 ********* Finished testing of tst_languageChange *********