Parse the pid file for exit code

0ea3d630b1fd1fc21c65c43063792e4cbf0c2cdf in qtbase writes the exit
code of the application into the pid file. This needs to be read
from winrtrunner and then passed as exit code of winrtrunner itself.

This allows to use winrtrunner for CI and other automated systems as the
exit code of the application itself is passed.

Task-number: QTBUG-38654
Change-Id: I28f915bf5c002078ba62546fea1ee014da5d0147
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>